event listener for entries on roadmap now correctly increments counter as well as changing the color to reflect that it has been read

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <div id="roadmap-window">
         <div id="page-counter" class="counter-incomplete">0/0</div>
 
-        <div id="hello-world-window" class="entry-window entry-unread" data-entry="Hellow_World">
+        <div id="hello-world-entry" class="entry-window entry-unread" data-entry="Hello_World">
             Hello, World!
         </div>
 
         <div id="branches-window">
             <div id="java-branch-window" class="branch-window">
-
+                <div id="java-basics-entry" class="entry-window entry-unread" data-entry="java_basics">
+                    Java Basics
+                </div>
+                <div id="Learning APIs" class="entry-window entry-unread" data-entry="learning_apis">
+                    Learning APIs
+                </div>
             </div>
     
             <div id="unh-branch-window" class="branch-window">
