add joined branch

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
                 <div id="my-first-big-project" class="entry-window entry-unread" data-entry="my-first-big-project">
                     My First Big Project!
                 </div>
-                <div id="finding_my_career" class="entry-window entry-unread" data-entry="finding_my_way">
-                    Finding My Career
-                </div>
             </div>
     
             <div id="unh-branch-window" class="branch-window">
@@ -57,6 +54,18 @@
                 <div id="roadblock" class="entry-window entry-unread" data-entry="roadblock">
                     Reaching A Roadblock
                 </div>
+            </div>
+        </div>
+
+        <div id="joined-branch-window">
+            <div id="finding-my-confidence" class="entry-window entry-unread" data-entry="finding-my-confidence">
+                Finding My Confidence
+            </div>
+            <div id="my-first-internship" class="entry-window entry-unread" data-entry="my-first-internship">
+                My First Internship!
+            </div>
+            <div id="my-future" class="entry-window entry-unread" data-entry="my-future">
+                My Future
             </div>
         </div>
     </div>
