add entry/section formatting

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Journey in Code</title>
     <link rel="stylesheet" href="index.css">
-    <script type="module" src="entries.js" defer></script>
+    <script type="module" src="Entries.js" defer></script>
     <script type="module" src="index.js" defer></script>
+    <script type="module" src="entry_files/HelloWorld.js" defer></script>
 </head>
 <body id="body">
     <div id="roadmap-window">
-        <div id="page-counter" class="counter-incomplete">0/0</div>
+        <div id="page-counter" class="counter-incomplete" data-entry="how-computers-work">0/0</div>
 
-        <div id="hello-world-entry" class="entry-window entry-unread" data-entry="Hello_World">
+        <div id="hello-world-entry" class="entry-window entry-unread" data-entry="hello_world">
             Hello, World!
         </div>
 
@@ -27,16 +28,16 @@
                 <div id="getting-lost" class="entry-window entry-unread" data-entry="getting_lost">
                     Getting Lost
                 </div>
-                <div id="my-first-big-project" class="entry-window entry-unread" data-entry="my-first-big-project">
+                <div id="my-first-big-project" class="entry-window entry-unread" data-entry="my_first_big_project">
                     My First Big Project!
                 </div>
             </div>
     
             <div id="unh-branch-window" class="branch-window">
-                <div id="new-languages" class="entry-window entry-unread" data-entry="new-languages">
+                <div id="new-languages" class="entry-window entry-unread" data-entry="new_languages">
                     New Languages For Class
                 </div>
-                <div id="learning-computers" class="entry-window entry-unread" data-entry="learning-computers">
+                <div id="learning-computers" class="entry-window entry-unread" data-entry="learning_computers">
                     Learning Computers With C
                 </div>
                 <div id="lunacats" class="entry-window entry-unread" data-entry="lunacats">
@@ -45,7 +46,7 @@
             </div>
     
             <div id="javascript-branch-window" class="branch-window">
-                <div id="javascript-basics" class="entry-window entry-unread" data-entry="javascript-basics">
+                <div id="javascript-basics" class="entry-window entry-unread" data-entry="javascript_basics">
                     JavaScript Basics
                 </div>
                 <div id="react" class="entry-window entry-unread" data-entry="react">
@@ -58,13 +59,13 @@
         </div>
 
         <div id="joined-branch-window">
-            <div id="finding-my-confidence" class="entry-window entry-unread" data-entry="finding-my-confidence">
+            <div id="finding-my-confidence" class="entry-window entry-unread" data-entry="finding_my_confidence">
                 Finding My Confidence
             </div>
-            <div id="my-first-internship" class="entry-window entry-unread" data-entry="my-first-internship">
+            <div id="my-first-internship" class="entry-window entry-unread" data-entry="my_first_internship">
                 My First Internship!
             </div>
-            <div id="my-future" class="entry-window entry-unread" data-entry="my-future">
+            <div id="my-future" class="entry-window entry-unread" data-entry="my_future">
                 My Future
             </div>
         </div>
