update Entries.js -> Entry.js because for some reason it was not tracking on Git

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Journey in Code</title>
+    <link rel="icon" href="resources/html_icon.png">
     <link rel="stylesheet" href="index.css">
-    <script type="module" src="Entries.js" defer></script>
+    <script type="module" src="Entry.js" defer></script>
     <script type="module" src="index.js" defer></script>
     <script type="module" src="entry_files/HelloWorld.js" defer></script>
 </head>
