add shadows to the roadmap entries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Journey in Code</title>
     <link rel="icon" href="resources/html_icon.png">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="entries.css">
     <script type="module" src="index.js" defer></script>
     <script type="module" src="entry_files/HelloWorld.js" defer></script>
 </head>
