add github button to open source code link

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="icon" href="resources/html_icon.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="entries.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="index.js" defer></script>
     <script type="module" src="entry_files/HelloWorld.js" defer></script>
 </head>
 <body id="body">
     <div id="roadmap-window">
+        <a target="_blank" href="https://github.com/Jackson-Wozniak">
+            <button id="github-button">
+                <i class="fa fa-github" style="font-size:24px"></i>
+            </button>
+        </a>
+
         <div id="page-counter" class="counter-incomplete" data-entry="how-computers-work">0/0</div>
 
         <div id="hello-world-entry" class="entry-window entry-unread" data-entry="hello_world">
