github link should point to the actual repo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body id="body">
     <div id="roadmap-window">
-        <a target="_blank" href="https://github.com/Jackson-Wozniak">
+        <a target="_blank" href="https://github.com/Jackson-Wozniak/My-Journey-In-Code">
             <button id="github-button">
                 <i class="fa fa-github" style="font-size:24px"></i>
             </button>
