add multiple entries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="module" src="entry_files/HelloWorld.js" defer></script>
 </head>
 <body id="body">
+    <div id="background-image"></div>
     <div id="roadmap-window">
         <a target="_blank" href="https://github.com/Jackson-Wozniak/My-Journey-In-Code">
             <button id="github-button">
