add tree structure

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
         <div id="page-counter" class="counter-incomplete" data-entry="how-computers-work">0/0</div>
 
-        <div id="hello-world-entry" class="entry-window entry-unread" data-entry="hello_world">
-            Hello, World!
+        <div id="root-window">
+            <div id="hello-world-entry" class="entry-window entry-unread" data-entry="hello_world">
+                Hello, World!
+            </div>
         </div>
 
         <div id="branches-window">
@@ -68,15 +70,19 @@
         </div>
 
         <div id="joined-branch-window">
-            <div id="finding-my-confidence" class="entry-window entry-unread" data-entry="finding_my_confidence">
-                Finding My Confidence
+            <div id="joined-branch-left"></div>
+            <div id="joined-branch">
+                <div id="finding-my-confidence" class="entry-window entry-unread" data-entry="finding_my_confidence">
+                    Finding My Confidence
+                </div>
+                <div id="my-first-internship" class="entry-window entry-unread" data-entry="my_first_internship">
+                    My First Internship!
+                </div>
+                <div id="my-future" class="entry-window entry-unread" data-entry="my_future">
+                    My Future
+                </div>
             </div>
-            <div id="my-first-internship" class="entry-window entry-unread" data-entry="my_first_internship">
-                My First Internship!
-            </div>
-            <div id="my-future" class="entry-window entry-unread" data-entry="my_future">
-                My Future
-            </div>
+            <div id="joined-branch-right"></div>
         </div>
     </div>
 
