--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </div>
 
     <div id="entry-popup-window">
+        <div id="entry-background"></div>
         <button id="entry-close-button">x</button>
         <div id="entry-content"></div>
     </div>
